# elkinjector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  config.example.yaml  docker-compose-simple.yml  docker-compose-test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_tests.py
elkinjector/: __init__.py  cli.py  client.py  config.py  injector.py
elkinjector/generators/: __init__.py  base.py  json_generator.py  logs.py  metrics.py
src/: injector.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_generators.py  test_injector.py
